--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       
       <h1 id="textsec2first" class="scaleUp itim med">Kamu Manis Mau Ngga<br>Jadi Pacar Aku? 🤭</h1>
-      <p id="tolakteks" class="itim">Etzz Harus mau dong! 😝</p>
+      <p id="tolakteks" class="itim">Eitss harus mau dong! 😝</p>
       <div id="Tombol">
         <a id="By" onClick="fungsimau()">Mau</a>
         <a id="Bn" onClick="btn='Bn';fungsibaru(btn)">Gamau</a>
