--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <head>
 <title>Cara Nembak</title>
-<meta name="description" content="Script by Feeldream.id">
+<meta name="description" content="Hedi Ganteng">
 </head>
 <body>
 	
